Fixed gap with navbar.

--- a/frontend/public/src/css/index.css
+++ b/frontend/public/src/css/index.css
@@ -1,9 +1,14 @@
 .jumbotron {
-    margin-bottom: 0px;
+    margin-top: 0px;
     background-image: url(/src/img/WULFblackandred.png);
     background-position: 0% 25%;
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
     text-shadow: black 0.3em 0.3em 0.3em;
+    height: 248px;
+}
+
+.navbar {
+    margin-bottom: 0px;
 }
